fix: scroll be covered by nav bar

--- a/my-app/src/style/style.scss
+++ b/my-app/src/style/style.scss
@@ -20,9 +20,9 @@ html,
 body,
 body > #root,
 #root > .App {
-  height: 100%;
+  //height: 100%;
   width: 100%;
-  overflow-x: hidden;
+  //overflow-x: hidden;
   margin: 0;
   padding: 0;
 }
@@ -30,10 +30,11 @@ body > #root,
 #root > .App {
   overflow-y: auto;
   background-image: url("../image/bg.png");
-  background-size: cover;
+  background-size: contain;
   background-position: center;
-  background-repeat: repeat;
-  background-attachment: scroll;
+  //background-repeat: repeat;
+  //background-attachment: scroll;
+  background-attachment: fixed;
 }
 
 #bg {
